# spg

./: data.dvc  models.dvc
notebooks/: pyproject.toml
notebooks/2_data_preparation/: data_preparation.ipynb
notebooks/3_modeling/: modeling.ipynb
notebooks/3_modeling/wandb/: latest-run
notebooks/3_modeling/wandb/run-20221030_123826-2tw6r2w3/: run-2tw6r2w3.wandb
notebooks/3_modeling/wandb/run-20221030_130500-3tecupzu/: run-3tecupzu.wandb
notebooks/3_modeling/wandb/run-20221030_130515-0vxr9lpr/: run-0vxr9lpr.wandb
notebooks/3_modeling/wandb/run-20221030_130556-ntafir4y/: run-ntafir4y.wandb
notebooks/3_modeling/wandb/run-20221030_130634-6zxoo79u/: run-6zxoo79u.wandb
notebooks/3_modeling/wandb/run-20221030_131004-q4khf6z3/: run-q4khf6z3.wandb
notebooks/3_modeling/wandb/run-20221030_131055-jzvq7kq9/: run-jzvq7kq9.wandb
notebooks/3_modeling/wandb/run-20221030_132002-5i3fgvzc/: run-5i3fgvzc.wandb
notebooks/3_modeling/wandb/run-20221030_132059-2uy1dhgs/: run-2uy1dhgs.wandb
notebooks/3_modeling/wandb/run-20221030_132250-e5454l3i/: run-e5454l3i.wandb
notebooks/3_modeling/wandb/run-20221030_132307-fe6k2nov/: run-fe6k2nov.wandb
notebooks/3_modeling/wandb/run-20221030_132405-3yhj2mjr/: run-3yhj2mjr.wandb
notebooks/3_modeling/wandb/run-20221030_132420-s1wwh49u/: run-s1wwh49u.wandb
notebooks/3_modeling/wandb/run-20221030_134735-r1htvmai/: run-r1htvmai.wandb
notebooks/3_modeling/wandb/run-20221030_134750-zi4rf6eg/: run-zi4rf6eg.wandb
notebooks/3_modeling/wandb/run-20221030_134806-gy270xmn/: run-gy270xmn.wandb
(+1049 files in other folders)
