[tool.poetry]
name = "spg"
version = "0.1.0"
description = ""
authors = ["Diego Babativa <dab.melgarejo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
krediya = {path = "./package", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"